--- a/Anchor.toml
+++ b/Anchor.toml
@@ -3,7 +3,7 @@ seeds = false
 skip-lint = false
 
 [programs.devnet]
-solana_nft_anchor = "<UPDATE HERE>"
+solana_nft_anchor = "D7Um7GCqcvKHoucousuNur5zX3HFGHmZVuDfsoke2nrv"
 
 [registry]
 url = "https://api.apr.dev"
